proxy2.yaml
node:
  cluster: service_oauth2
  id: test-id-1
admin:
  access_log_path: /tmp/admin_access.log   # seems to be necessary to have an admin endpoint
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9902
static_resources:
  secrets:
  - name: token
    generic_secret:
      secret:
        inline_string: "CLIENT_SECRET_HERE"
  - name: hmac
    generic_secret:
      secret:
        inline_string: "HMAC_SECRET_HERE"
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081 
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          strip_matching_host_port: false
          route_config:
            name: local_route           
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: 
                  cluster: service_backend
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: service_backend
                  uri: https://www.strava.com/oauth/token
                  timeout: 3s
                authorization_endpoint: https://www.strava.com/oauth/authorize
                redirect_uri: "http://%REQ(:authority)%/callback"              
                redirect_path_matcher:
                  path:
                    exact: /callback
                signout_path:
                  path:
                    exact: /signout  
                forward_bearer_token: true                      
                credentials:
                  client_id: "CLIENT_ID"
                  token_secret:
                    name: token
                  hmac_secret:
                    name: hmac
                auth_scopes:
                - activity:write
          - name: envoy.filters.http.router
  clusters:
  - name: service_backend
    type: STATIC
    connect_timeout: 5s
    load_assignment:
      cluster_name: service_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
